<resources>
    <string name="app_name">Complaint Free</string>
    <string name="settings">Settings</string>
    <string name="confirm_reset">Do you really want to reset all stats?</string>
    <string name="reset_button">RESET</string>
    <string name="reset_preference">Reset history</string>
    <string name="reset_activity_label">Reset history</string>
    <string name="statistics_activity_label">Statistics</string>
    <string name="statistics_max_duration_label">Maximum</string>
    <string name="statistics_average_duration_label">Average</string>
    <string name="statistics_median_duration_label">Median</string>
    <string name="statistics_count_duration_label">Complaints count</string>
    <string name="statistics_current_duration_label">Current no complaint time</string>
    <string name="report_complaint_button">I have complained!</string>
    <string name="history">History of complaints</string>
    <string name="delete">Delete</string>
    <plurals name="seconds">
        <item formatted="false" quantity="one">second</item>
        <item formatted="false" quantity="other">seconds</item>
    </plurals>
    <plurals name="minutes">
        <item formatted="false" quantity="one">minute</item>
        <item formatted="false" quantity="other">minutes</item>
    </plurals>
    <plurals name="hours">
        <item formatted="false" quantity="one">hour</item>
        <item formatted="false" quantity="other">hours</item>
    </plurals>
    <plurals name="days">
        <item formatted="false" quantity="one">day</item>
        <item formatted="false" quantity="other">days</item>
    </plurals>
</resources>
