<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/statistics_row_current_no_complain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toTopOf="@id/statistics_row_average">

            <TextView
                android:id="@+id/statistics_current_field_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/statistics_current_duration_label" />

            <TextView
                android:id="@+id/statistics_current_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_row_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toTopOf="@id/statistics_row_average">

            <TextView
                android:id="@+id/statistics_max_field_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/statistics_max_duration_label" />

            <TextView
                android:id="@+id/statistics_max_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_row_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toTopOf="@id/statistics_row_median"
            app:layout_constraintTop_toBottomOf="@id/statistics_row_max">

            <TextView
                android:id="@+id/statistics_average_field_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/statistics_average_duration_label" />

            <TextView
                android:id="@+id/statistics_average_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_row_median"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/statistics_row_average"
            app:layout_constraintBottom_toTopOf="@id/statistics_row_count">

            <TextView
                android:id="@+id/statistics_median_field_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/statistics_median_duration_label" />

            <TextView
                android:id="@+id/statistics_median_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_row_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/statistics_row_median">

            <TextView
                android:id="@+id/statistics_count_field_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/statistics_count_duration_label" />

            <TextView
                android:id="@+id/statistics_count_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="right"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>